[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/levels/Level.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/levels/tilemaps/Competion-01.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/levels/map/CompetitionLevel.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 2000 )

[node name="CompetitionLevel" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Competion01" parent="." index="1" instance=ExtResource( 2 )]

[node name="StaticBody2D" type="StaticBody2D" parent="." index="2"]
collision_layer = 16
collision_mask = 0

[node name="Left" type="CollisionShape2D" parent="StaticBody2D" index="0"]
position = Vector2( 0, 1500 )
shape = SubResource( 1 )

[node name="Right" type="CollisionShape2D" parent="StaticBody2D" index="1"]
position = Vector2( 1280, 1500 )
shape = SubResource( 1 )

[node name="Start" parent="." index="3"]
position = Vector2( 635.264, -33.4543 )

[node name="Camera2D" parent="." index="5"]
position = Vector2( 635.718, -60.5446 )

[node name="Countdown" type="Label" parent="CanvasLayer" index="0"]
margin_left = 365.587
margin_top = 14.9831
margin_right = 558.587
margin_bottom = 106.983
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountdownStart" type="Label" parent="CanvasLayer" index="1"]
margin_left = 608.313
margin_top = 32.9628
margin_right = 801.313
margin_bottom = 124.963
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartupTimer" type="Timer" parent="." index="7"]

[node name="GameTimer" type="Timer" parent="." index="8"]
wait_time = 60.0

[connection signal="empty_bucket" from="Player" to="." method="_on_Player_empty_bucket"]
[connection signal="fill_bucket" from="Player" to="." method="_on_Player_fill_bucket"]
[connection signal="spawn_explosive" from="Player" to="." method="_on_Player_spawn_explosive"]
[connection signal="throw_dirt_shovel" from="Player" to="." method="_on_Player_throw_dirt_shovel"]
[connection signal="timeout" from="StartupTimer" to="." method="_on_StartupTimer_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
